crates/math-core/tests/snapshots/conversion_test__unicode_op_not_large.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: a ⨟ b
---
<math>
    <mi>a</mi>
    <mo lspace="0.1667em" rspace="0.1667em">⨟</mo>
    <mi>b</mi>
</math>
