crates/math-core/tests/snapshots/conversion_test__unicode_open_close.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: ⦃ a + b ⦄
---
<math>
    <mo stretchy="false">⦃</mo>
    <mi>a</mi>
    <mo>+</mo>
    <mi>b</mi>
    <mo stretchy="false">⦄</mo>
</math>
