crates/math-core/tests/snapshots/conversion_test__unicode_open_close_force.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: ⟅ a + b ⟆
---
<math>
    <mo form="prefix" lspace="0" rspace="0">⟅</mo>
    <mi>a</mi>
    <mo>+</mo>
    <mi>b</mi>
    <mo form="postfix" lspace="0" rspace="0">⟆</mo>
</math>
