crates/math-core/tests/snapshots/conversion_test__unicode_prime_3.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: a‴
---
<math>
    <msup>
        <mi>a</mi>
        <mo>‴</mo>
    </msup>
</math>
