crates/math-core/tests/snapshots/conversion_test__unicode_primealooza.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: a‷″″′″‷′′‶‵^a_b
---
<math>
    <msubsup>
        <mi>a</mi>
        <mi>b</mi>
        <mrow>
            <mo>‷</mo>
            <mo>′</mo>
            <mrow style="margin-left:-0.0833em;"></mrow>
            <mo>′</mo>
            <mrow style="margin-left:-0.0833em;"></mrow>
            <mo>′</mo>
            <mrow style="margin-left:-0.0833em;"></mrow>
            <mo>′</mo>
            <mrow style="margin-left:-0.0833em;"></mrow>
            <mo>′</mo>
            <mrow style="margin-left:-0.0833em;"></mrow>
            <mo>′</mo>
            <mrow style="margin-left:-0.0833em;"></mrow>
            <mo>′</mo>
            <mo>‷</mo>
            <mo>″</mo>
            <mo>‷</mo>
            <mi>a</mi>
        </mrow>
    </msubsup>
</math>
