crates/math-core/tests/snapshots/conversion_test__unicode_primealooza_standalone.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: ‷″″′″‷′′‶‵
---
<math>
    <msup>
        <mrow></mrow>
        <mrow>
            <mo>‷</mo>
            <mo>′</mo>
            <mrow style="margin-left:-0.0833em;"></mrow>
            <mo>′</mo>
            <mrow style="margin-left:-0.0833em;"></mrow>
            <mo>′</mo>
            <mrow style="margin-left:-0.0833em;"></mrow>
            <mo>′</mo>
            <mrow style="margin-left:-0.0833em;"></mrow>
            <mo>′</mo>
            <mrow style="margin-left:-0.0833em;"></mrow>
            <mo>′</mo>
            <mrow style="margin-left:-0.0833em;"></mrow>
            <mo>′</mo>
            <mo>‷</mo>
            <mo>″</mo>
            <mo>‷</mo>
        </mrow>
    </msup>
</math>
